Fixed code errors found by validator

--- a/experience.html
+++ b/experience.html
@@ -27,11 +27,11 @@
       <section id="education" class="card">
         <h2>Education</h2>
 
-        <strong>Front End Web Developer Techdegree &#40;in work&#41</strong><br>
+        <strong>Front End Web Developer Techdegree &#40;in work&#41;</strong><br>
         <small><em>Team Treehouse, 2023-Present</em></small>
         <br><br>
         
-        <strong>Bachelor of Science in Computer Technology &#40;in work&#41</strong><br>
+        <strong>Bachelor of Science in Computer Technology &#40;in work&#41;</strong><br>
         <small><em>American Military University, 2022-Present</em></small>
         <br><br>
         
