Extra credit changes

--- a/experience.html
+++ b/experience.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <div class="menubar">
       <ul class="nav">
         <li class="name">Christopher Laynes</li>
         <li><a href="index.html">Home</a></li>
@@ -19,12 +19,12 @@
 
     <header>
       <img src="images/adobestockjob.jpeg" alt="Photo of Chris Laynes" class="profile-image">
-      <h1 class="tag name">Experience &amp; Education</h1>
+      <h1 class="tag name">Education &amp; Experience</h1>
     </header>
 
     <main class="flex">
 
-      <section id="education" class="card">
+      <section id="education" class="topic">
         <h2>Education</h2>
 
         <strong>Front End Web Developer Techdegree &#40;in work&#41;</strong><br>
@@ -40,7 +40,7 @@
         <br><br>
       </section> 
 
-      <section id="experience" class="card">
+      <section id="experience" class="topic">
         <h2>Experience</h2>
 
         <strong>CALIFORNIA AIR NATIONAL GUARD</strong><br>
@@ -67,7 +67,7 @@
         <li><a href="https://www.linkedin.com/in/christopher-laynes-12977522/" class="social linkedin">LinkedIn</a></li>
         <li><a href="https://github.com/chrislaynes" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">&copy; 2015, Christopher Laynes</p>
+      <p class="copyright"><small>&copy; 2023, Christopher Laynes</small></p>
     </footer>
   </body>
   </html>
