--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
 
-      <div class="main-nav">
+      <div class="menubar">
           <ul class="nav">
             <li class="name">Christopher Laynes</li>
             <li><a href="index.html">Home</a></li>
@@ -22,26 +22,38 @@
       <header>
         <img src="images/chrisl.jpg" alt="Photo of Chris Laynes" class="profile-image">
         <h1 class="tag name">Hi, I’m Chris.</h1>
-        <p class="tag location">My home is San Jose, California.</p>
+        <p class="tag location">My hometown is San Jose, California.</p>
       </header>
 
       <main class="flex">
-        <div class="card">
+        <div class="topic">
           <h2>Background</h2>
           <p>I’m an aspiring web designer who is currently working as a C-130J military aircraft mechanic in the United States Air Force. I've enjoyed my job in the military because it's allowed me to travel the world, seeing places like Prague, Budapest, London, Oxford, Ukraine, Thailand, Djibouti and many more. It's been 20 years since I'd first joined, but now I'd like to change things up and finally pursue my true passion in life, which is computers.</p>
           <p>Ever since my father brought home the family's very first PC in 1993, I fell in love with the machine. With zero computer knowledge, I took the computer apart because of curiosity. My father seen this and of course got angry, and my young self put it back together in a breeze. I've built many PC's since then, and played with coding here and there throughout my life. I've been waiting for this opportunity in life, and the military's free tuition assistance is now making this dream as a coder come true.</p>
         </div> 
 
-        <div class="card">
-          <h2>Goals</h2>
+        <div class="topic">
+          <h2>Favorite Hobbies</h2>
+          <p>These are just a few ways I love to spend my free time:</p>
+          <ul>
+            <li>Quality time with my wife and two boys</li>
+            <li>Running half-marathons</li>
+            <li>Cycling with my CAAD10 road bike</li>
+            <li>Exploring new hiking trails</li>
+            <li>Traveling to new places</li>
+            <li>Anything dealing with computers!</li>
+          </ul>
+        </div>
+
+        <div class="topic">
+          <h2>Current Goals</h2>
           <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
     
           <ul class="skills">
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
-            <li>Ruby</li>
-            <li>Rails</li>
+            <li>React</li>
           </ul>
 
           <p>Since computers are my true passion in life, I am working to finish my formal education while continuing to learn all that I can to become an experienced Full Stack Developer, using my skills to provide value for a big name company.</p>
@@ -55,7 +67,7 @@
           <li><a href="https://www.linkedin.com/in/christopher-laynes-12977522/" class="social linkedin">LinkedIn</a></li>
           <li><a href="https://github.com/chrislaynes" class="social github">Github</a></li>
         </ul>
-        <p class="copyright">&copy; 2015, Christopher Laynes</p>
+        <p class="copyright"><small>&copy; 2023, Christopher Laynes</small></p>
       </footer>
 
   </body>
