Added hobbies and photos

--- a/index.html
+++ b/index.html
@@ -34,15 +34,23 @@
 
         <div class="topic">
           <h2>Favorite Hobbies</h2>
-          <p>These are just a few ways I love to spend my free time:</p>
+          <p>These are just some of my many hobbies:</p>
           <ul>
-            <li>Quality time with my wife and two boys</li>
-            <li>Running half-marathons</li>
+            <li>Spending quality time with my wife and two boys</li>
+            <li>Running and exploring new places to run</li>
             <li>Cycling with my CAAD10 road bike</li>
             <li>Exploring new hiking trails</li>
             <li>Traveling to new places</li>
+            <li>Photography. <a href="https://gurushots.com/chrislaynes/photos" target="_blank">See my photos here</a></li>
+            <li>Cryptocurrencies and NFT's</li>
             <li>Anything dealing with computers!</li>
-          </ul>
+          </ul><br>
+
+          <a href="images/caad10.jpg"><img src="images/caad10.jpg" alt="Chris' CAAD10 road bike" class="hobbies-img" height="120"></a>
+          <a href="images/travelcruise.jpg"><img src="images/travelcruise.jpg" alt="Chris' CAAD10 road bike" class="hobbies-img" height="120"></a>
+          <a href="images/clphotography.jpg"><img src="images/clphotography.jpg" alt="Chris' CAAD10 road bike" class="hobbies-img" height="120"></a><br>
+
+        
         </div>
 
         <div class="topic">
