Shrank image sizes and fixed code

--- a/experience.html
+++ b/experience.html
@@ -12,19 +12,18 @@
       <ul class="nav">
         <li class="name">Christopher Laynes</li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="experience.html#education">Education</a></li>
-        <li><a href="experience.html#experience">Experience</a></li>
+        <li><a href="experience.html">Education &amp; Experience</a></li>
       </ul>
     </div>
 
     <header>
-      <img src="images/adobestockjob.jpeg" alt="Photo of Chris Laynes" class="profile-image">
+      <img src="images/adobestockjob.jpg" alt="Photo of top of a work desk" class="profile-image">
       <h1 class="tag name">Education &amp; Experience</h1>
     </header>
 
     <main class="flex">
 
-      <section id="education" class="topic">
+      <section class="topic">
         <h2>Education</h2>
 
         <strong>Front End Web Developer Techdegree &#40;in work&#41;</strong><br>
@@ -40,7 +39,7 @@
         <br><br>
       </section> 
 
-      <section id="experience" class="topic">
+      <section class="topic">
         <h2>Experience</h2>
 
         <strong>CALIFORNIA AIR NATIONAL GUARD</strong><br>
