--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 
   <body>
 
-      <div class="menubar">
-          <ul class="nav">
-            <li class="name">Christopher Laynes</li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="experience.html#education">Education</a></li>
-            <li><a href="experience.html#experience">Experience</a></li>
-          </ul>
-      </div>
+    <div class="menubar">
+      <ul class="nav">
+        <li class="name">Christopher Laynes</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="experience.html">Education &amp; Experience</a></li>
+      </ul>
+    </div>
 
       <header>
         <img src="images/chrisl.jpg" alt="Photo of Chris Laynes" class="profile-image">
@@ -47,8 +46,8 @@
           </ul><br>
 
           <a href="images/caad10.jpg"><img src="images/caad10.jpg" alt="Chris' CAAD10 road bike" class="hobbies-img" height="120"></a>
-          <a href="images/travelcruise.jpg"><img src="images/travelcruise.jpg" alt="Chris' CAAD10 road bike" class="hobbies-img" height="120"></a>
-          <a href="images/clphotography.jpg"><img src="images/clphotography.jpg" alt="Chris' CAAD10 road bike" class="hobbies-img" height="120"></a><br>
+          <a href="images/travelcruise.jpg"><img src="images/travelcruise.jpg" alt="Photo taken by Chris of Key West waters from a porthole from a Disney cruise" class="hobbies-img" height="120"></a>
+          <a href="images/clphotography.jpg"><img src="images/clphotography.jpg" alt="A sunset photo taken by Chris at a beach in Destin, Florida" class="hobbies-img" height="120"></a><br>
 
         
         </div>
