--- a/education.html
+++ b/education.html
@@ -27,23 +27,23 @@
 
       <main class="flex">
 
-        <div class="topic">
-            <strong>Front End Web Developer Techdegree &#40;in work&#41;</strong><br>
+        <section class="topic">
+            <h2>Front End Web Developer Techdegree &#40;in work&#41;</h2>
             <small><em>Team Treehouse<br>2023-Present</em></small>
             <br><br><img src="images/seal.png" alt="An icon of a certificate seal of authenticity." width="50">
-        </div> 
+        </section> 
 
-        <div class="topic">
-            <strong>BS in Computer Technology &#40;in work&#41;</strong><br>
+        <section class="topic">
+            <h2>BS in Computer Technology &#40;in work&#41;</h2>
             <small><em>American Military University<br>2022-Present</em></small>
             <br><br><img src="images/seal.png" alt="An icon of a certificate seal of authenticity." width="50">
-        </div> 
+        </section> 
 
-        <div class="topic">
-            <strong>AAS in Aviation Maintenance Technology</strong><br>
+        <section class="topic">
+            <h2>AAS in Aviation Maintenance Technology</h2>
             <small><em>Community College of the Air Force<br>2019-2022</em></small>
             <br><br><img src="images/seal.png" alt="An icon of a certificate seal of authenticity." width="50">
-        </div> 
+        </section> 
       </main>
       
       <footer>
