--- a/experience.html
+++ b/experience.html
@@ -27,34 +27,26 @@
 
     <main class="flex">
 
-      <div class="topic">
-            <strong>
-              CALIFORNIA AIR NATIONAL GUARD<br>
-              Moffett Air National Guard Base, California
-            </strong><br>
-            <small><em>C-130 Crew Chief<br>2006-Present</em></small>
-      </div> 
-      <div class="topic">
-            <strong>
-              UNITED STATES AIR FORCE
-              Hurlburt Field Air Force Base, Florida
-            </strong><br>
-            <small><em>C-130 Crew Chief<br>2002-2006</em></small>
-      </div> <br><br>
-      <div class="topic">
-          <strong>
-            FRY'S ELECTRONICS
-            San Jose, California
-          </strong><br>
-          <small><em>Software Sales Associate<br>2006-2008</em></small>
-      </div> 
-      <div class="topic">
-        <strong>
-          BEST BUY
-          Milpitas, California
-        </strong><br>
-        <small><em>Computer Sales Associate<br>2000-2001</em></small>
-      </div> 
+      <section class="topic">
+            <h2>CALIFORNIA AIR NATIONAL GUARD</h2>
+            <small>Moffett Air National Guard Base, California<br><br>
+            <em>C-130 Crew Chief<br>2006-Present</em></small>
+      </section> 
+      <section class="topic">
+            <h2>UNITED STATES AIR FORCE</h2>
+            <small>Hurlburt Field Air Force Base, Florida<br><br>
+            <em>C-130 Crew Chief<br>2002-2006</em></small>
+      </section> <br><br>
+      <section class="topic">
+          <h2>FRY'S ELECTRONICS</h2>
+          <small>San Jose, California<br><br>
+          <em>Software Sales Associate<br>2006-2008</em></small>
+      </section> 
+      <section class="topic">
+        <h2>BEST BUY</h2>
+        <small>Milpitas, California<br><br>
+        <em>Computer Sales Associate<br>2000-2001</em></small>
+      </section> 
 
     </main>
 
