--- a/hobbies.html
+++ b/hobbies.html
@@ -27,23 +27,23 @@
 
     <main class="flex">
     
-    <div class="topic">
+    <section class="topic">
     <h2>Running</h2>
     <p>Running half marathons with an audiobook playing through my earbuds is my idea of relaxation.</p>
     <a href="images/21miles.jpg"><img src="images/21miles.jpg" alt="A strava activity logging Chris' 21 mile run." class="hobbies-img" height="120"></a><br>
-    </div>
+    </section>
 
-    <div class="topic">
+    <section class="topic">
     <h2>Cycling</h2>
     <p>When I can't run due to injury, I cycle. I hop on my Cannondale CAAD10 and hit those hills.</p>
     <a href="images/caad10.jpg"><img src="images/caad10.jpg" alt="Chris' CAAD10 road bike" class="hobbies-img" height="120"></a><br>
-    </div>
+    </section>
 
-    <div class="topic">
+    <section class="topic">
     <h2>Photography</h2>
     <p>Any time I travel to new places, you can bet I've got my camera with me to please my love for photography. You can <a href="https://gurushots.com/chrislaynes/photos">see my photography on Gurushots.</a></p>
     <a href="images/clphotography.jpg"><img src="images/clphotography.jpg" alt="A sunset photo taken by Chris at a beach in Destin, Florida" class="hobbies-img" height="120"></a><br>
-    </div>
+    </section>
 
     </main>
     
