--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       </header>
 
       <main class="flex">
-        
-        <div class="topic">
-          <h2>Background</h2>
-          <p>I’m an aspiring web designer who is currently working as a C-130J military aircraft mechanic in the United States Air Force. I've enjoyed my job in the military because it's allowed me to travel the world, seeing places like Prague, Budapest, London, Oxford, Ukraine, Thailand, Djibouti and many more. It's been 20 years since I'd first joined, but now I'd like to change things up and finally pursue my true passion in life, which is computers.</p>
-          <p>Ever since my father brought home the family's very first PC in 1993, I fell in love with the machine. With zero computer knowledge, I took the computer apart because of curiosity. My father seen this and of course got angry, and my young self put it back together in a breeze. I've built many PC's since then, and played with coding here and there throughout my life. I've been waiting for this opportunity in life, and the military's free tuition assistance is now making this dream as a coder come true.</p>
-        </div> 
 
-        <div class="topic">
+        <section class="topic">
+          <h2>Background</h2>
+          <p>I’m an aspiring web designer who is currently working as a C-130J military aircraft mechanic in the United States Air Force. I've enjoyed my job in the military because it's allowed me to travel the world, seeing places like Prague, Budapest, London, Oxford, Ukraine, Thailand, Djibouti and many more. It's been 20 years since I first joined the military, and I think it's finally time I align my career with my true passion, which is computers.</p>
+          <p>Ever since my father brought home the family's very first PC in 1993, I fell in love with the machine. With zero computer knowledge, I took the computer apart because of curiosity. My father had seen this and of course got angry, and my young self put it back together in a breeze. I've built many PC's since then, and played with coding here and there throughout my life. I've been waiting for this opportunity in life, and the military's free tuition assistance is now making this dream as a coder come true.</p>
+        </section> 
+
+        <section class="topic">
           <h2>Goals</h2>
           <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
           <ul class="skills">
@@ -43,8 +43,9 @@
             <li>JavaScript</li>
             <li>React</li>
           </ul>
-          <p>Since computers are my true passion in life, I am working to finish my formal education while continuing to learn all that I can to become an experienced Full Stack Developer, using my skills to provide value for a big name company.</p>
-        </div> 
+          <p>Since computers are my true passion in life, I am working to finish my formal education while continuing to learn all that I can to become an experienced Full Stack Developer, using my skills to provide value for a big name company. I know it's competitive out there right now, but I will aim high and do my best.</p>
+          <p>I have started my journey by going back to school to obtain my BS in Computer Technology, but I've got a few years to go before I finish. In the meantime, I found Team Treehouse and have registered for the Front End Web Development Techdegree. When I finish the program, I will enroll in another program, but I will focus my attention on improving my portfolio with quality projects, while I dip my feet into freelancing my skill to gain some experience. I will also be looking for internships and jobs to work with a team to further develop my skills from there. Networking with others will be a priority for me the entire time.</p>
+        </section> 
 
       </main>
       
