Semantics nav>div

--- a/education.html
+++ b/education.html
@@ -10,7 +10,7 @@
 
   <body>
 
-    <div class="menubar">
+    <nav class="menubar">
       <ul class="nav">
         <li class="name">Christopher Laynes</li>
         <li><a href="index.html">Home</a></li>
@@ -18,7 +18,7 @@
         <li><a href="experience.html">Experience</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
       </ul>
-    </div>
+    </nav>
 
       <header>
         <img src="images/chrisl.jpg" alt="Photo of Chris Laynes" class="profile-image">
@@ -35,7 +35,7 @@
 
         <section class="topic">
             <h2>BS in Computer Technology &#40;in work&#41;</h2>
-            <small><em>American Military University<br>2022-Present</em></small>
+            <small><em>Concentration in Web Development<br>American Military University<br>2022-Present</em></small>
             <br><br><img src="images/seal.png" alt="An icon of a certificate seal of authenticity." width="50">
         </section> 
 
