--- a/experience.html
+++ b/experience.html
@@ -10,7 +10,7 @@
 
   <body>
 
-    <div class="menubar">
+    <nav class="menubar">
       <ul class="nav">
         <li class="name">Christopher Laynes</li>
         <li><a href="index.html">Home</a></li>
@@ -18,7 +18,7 @@
         <li><a href="experience.html">Experience</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
       </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/chrisl.jpg" alt="Photo of Chris Laynes" class="profile-image">
@@ -36,7 +36,7 @@
             <h2>UNITED STATES AIR FORCE</h2>
             <small>Hurlburt Field Air Force Base, Florida<br><br>
             <em>C-130 Crew Chief<br>2002-2006</em></small>
-      </section> <br><br>
+      </section>
       <section class="topic">
           <h2>FRY'S ELECTRONICS</h2>
           <small>San Jose, California<br><br>
