--- a/hobbies.html
+++ b/hobbies.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<div class="menubar">
+<nav class="menubar">
     <ul class="nav">
     <li class="name">Christopher Laynes</li>
     <li><a href="index.html">Home</a></li>
@@ -18,7 +18,7 @@
     <li><a href="experience.html">Experience</a></li>
     <li><a href="hobbies.html">Hobbies</a></li>
     </ul>
-</div>
+</nav>
 
     <header>
     <img src="images/chrisl.jpg" alt="Photo of Chris Laynes" class="profile-image">
