--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
 
-    <div class="menubar">
+    <nav class="menubar">
       <ul class="nav">
         <li class="name">Christopher Laynes</li>
         <li><a href="index.html">Home</a></li>
@@ -18,7 +18,7 @@
         <li><a href="experience.html">Experience</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
       </ul>
-    </div>
+    </nav>
 
       <header>
         <img src="images/chrisl.jpg" alt="Photo of Chris Laynes" class="profile-image">
@@ -30,7 +30,7 @@
 
         <section class="topic">
           <h2>Background</h2>
-          <p>I’m an aspiring web designer who is currently working as a C-130J military aircraft mechanic in the United States Air Force. I've enjoyed my job in the military because it's allowed me to travel the world, seeing places like Prague, Budapest, London, Oxford, Ukraine, Thailand, Djibouti and many more. It's been 20 years since I first joined the military, and I think it's finally time I align my career with my true passion, which is computers.</p>
+          <p>I’m an aspiring web developer who is currently working as a C-130J military aircraft mechanic in the United States Air Force. I've enjoyed my job in the military because it's allowed me to travel the world, seeing places like Prague, Budapest, London, Oxford, Ukraine, Thailand, Djibouti and many more. It's been 20 years since I first joined the military, and I think it's finally time I align my career with my true passion, which is computers.</p>
           <p>Ever since my father brought home the family's very first PC in 1993, I fell in love with the machine. With zero computer knowledge, I took the computer apart because of curiosity. My father had seen this and of course got angry, and my young self put it back together in a breeze. I've built many PC's since then, and played with coding here and there throughout my life. I've been waiting for this opportunity in life, and the military's free tuition assistance is now making this dream as a coder come true.</p>
         </section> 
 
