--- a/education.html
+++ b/education.html
@@ -26,24 +26,23 @@
       </header>
 
       <main class="flex">
-
         <section class="topic">
-            <h2>Front End Web Developer Techdegree &#40;in work&#41;</h2>
+            <h2 class="education">Front End Web Developer Techdegree &#40;in work&#41;</h2>
             <small><em>Team Treehouse<br>2023-Present</em></small>
             <br><br><img src="images/seal.png" alt="An icon of a certificate seal of authenticity." width="50">
         </section> 
 
         <section class="topic">
-            <h2>BS in Computer Technology &#40;in work&#41;</h2>
+            <h2 class="education">BS in Computer Technology &#40;in work&#41;</h2>
             <small><em>Concentration in Web Development<br>American Military University<br>2022-Present</em></small>
             <br><br><img src="images/seal.png" alt="An icon of a certificate seal of authenticity." width="50">
         </section> 
 
         <section class="topic">
-            <h2>AAS in Aviation Maintenance Technology</h2>
+            <h2 class="education">AAS in Aviation Maintenance Technology</h2>
             <small><em>Community College of the Air Force<br>2019-2022</em></small>
             <br><br><img src="images/seal.png" alt="An icon of a certificate seal of authenticity." width="50">
-        </section> 
+        </section>
       </main>
       
       <footer>
